[package]
name = "chip8rs"
version = "0.1.0"
authors = ["Antoine Busch <antoine.busch@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap="3"
env_logger = "0.9"
game-loop = { version="0.8", features = ["window"] }
log = "0.4.0"
pixels="0.9"
rand="0.8"
winit="0.26"
winit_input_helper="0.11"
